--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body, h1, h2, p, ul, li, img {
     margin: 0;
     padding: 0;
+    background-color: antiquewhite;
 }
 
 /* Center the content vertically and horizontally */
